# AutoDoppelGANger-GOLEM

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  unet.py  unet_def.py
config/: download_compcars_dataset.yaml  download_lsun_dataset.yaml
config/models/: gan.yml  vae.yml
docs/: mkdocs.yml
docs/docs/: index.md
src/: autodoppelganger_shell.py  car_cutter.py  car_finder.py  data_augmenter.py  data_preprocessor.py  image_quality_analyzer.py  labeler.py  model_eval.py
src/core/: logger.py  model.py  trainer.py
src/models/gan/: gan.py  model.py
src/models/vae/: vae.py  vae_trainer.py
src/scripts/: __init__.py  download_compcars_dataset.py  download_lsun_dataset.py  train.py
